Updated on Model. Learning through Google Colab

--- a/NLP Model.ipynb
+++ b/NLP Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "4b009cc2-d6ba-4481-8112-9622b6d88119",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,18 @@
     "import torch.nn as nn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from nltk.tokenize import word_tokenize\n",
     "\n",
     "import torchvision.transforms as transforms\n",
     "from torchvision.datasets import CIFAR10\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7f2eda4e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "b8951969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_counter = Counter();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "2d533789",
    "metadata": {},
    "outputs": [],
@@ -41,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "7cfe02bb",
    "metadata": {},
    "outputs": [
@@ -283,7 +296,7 @@
        "[568454 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,6 +304,263 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b8104b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"tokenized\"] = df[\"Text\"].apply(word_tokenize);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3f8c6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Indexing and Numericalization\n",
+    "word_counter = Counter()\n",
+    "for tokens in df['tokenized']:\n",
+    "    word_counter.update(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1e4ce6c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = {word: idx + 2 for idx, (word, _) in enumerate(word_counter.most_common())}\n",
+    "vocab['<PAD>'] = 0  # Padding token\n",
+    "vocab['<UNK>'] = 1  # Unknown token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b563e3c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['numericalized'] = df['tokenized'].apply(lambda x: [vocab.get(token, vocab['<UNK>']) for token in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dce5d77b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Padding\n",
+    "max_len = max(map(len, df['numericalized']))\n",
+    "df['padded'] = df['numericalized'].apply(lambda x: x + [vocab['<PAD>']] * (max_len - len(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f57c7ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self, X, y):\n",
+    "        super(CustomDataset, self).__init__();\n",
+    "        self.X = X;\n",
+    "        self.y = y;\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.X);\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.X[index], self.y[index];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5fb0a2c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Score'] = df['Score'] - 1\n",
+    "# Load the data, padded versions.\n",
+    "X = torch.tensor(df[\"padded\"].tolist());\n",
+    "y = torch.tensor(df[\"Score\"].tolist()).long();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "397f7c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = CustomDataset(X, y);\n",
+    "n = len(dataset);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e70ac2f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32;\n",
+    "train_size = int(0.75 * n);\n",
+    "validation_size = int(0.15 * n);\n",
+    "test_size = n - train_size - validation_size;\n",
+    "\n",
+    "train_dataset, val_dataset, test_dataset = torch.utils.data.random_split(dataset, [train_size, validation_size, test_size])\n",
+    "\n",
+    "# Create DataLoader for each train, validation, and test datasets.\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "validation_dataloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=True)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9ebf85aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Model(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, num_layers = 1):\n",
+    "        super(Model, self).__init__();\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim);\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True);\n",
+    "        self.fc = nn.Linear(hidden_dim, output_dim);\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        embedded = self.embedding(x);\n",
+    "        lstm_out, _ = self.lstm(embedded);\n",
+    "        out = self.fc(lstm_out[:, -1, :]);\n",
+    "        return out;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ade04947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining hyperparameters\n",
+    "vocab_size = len(vocab);\n",
+    "embedding_dim = 100;\n",
+    "hidden_dim = 128;\n",
+    "output_dim = 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9468a5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model(vocab_size, embedding_dim, hidden_dim, output_dim);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4105a7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss();\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a7b5dfcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m loss \u001b[39m=\u001b[39m criterion(outputs, labels);\n\u001b[1;32m     18\u001b[0m \u001b[39m# Backward pass and optimization.\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m loss\u001b[39m.\u001b[39;49mbackward();\n\u001b[1;32m     20\u001b[0m optimizer\u001b[39m.\u001b[39mstep();\n\u001b[1;32m     22\u001b[0m total_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39mitem();\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/torch/_tensor.py:522\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    512\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    513\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    514\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    515\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    520\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    521\u001b[0m     )\n\u001b[0;32m--> 522\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    523\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    524\u001b[0m )\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/torch/autograd/__init__.py:266\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    261\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    263\u001b[0m \u001b[39m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    264\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    265\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 266\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    267\u001b[0m     tensors,\n\u001b[1;32m    268\u001b[0m     grad_tensors_,\n\u001b[1;32m    269\u001b[0m     retain_graph,\n\u001b[1;32m    270\u001b[0m     create_graph,\n\u001b[1;32m    271\u001b[0m     inputs,\n\u001b[1;32m    272\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m    273\u001b[0m     accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m    274\u001b[0m )\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 10;\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train(); # Train the model.\n",
+    "    total_loss = 0; # Initialize the Loss to 0.\n",
+    "\n",
+    "    for inputs, labels in train_dataloader:\n",
+    "        optimizer.zero_grad()  # Clearing out the Gradient Descent\n",
+    "\n",
+    "        # Forward the loss\n",
+    "        inputs = inputs.to(torch.int64)\n",
+    "        labels = labels.to(torch.int64)\n",
+    "        outputs = model(inputs);\n",
+    "\n",
+    "        # Calculate the loss.\n",
+    "        loss = criterion(outputs, labels);\n",
+    "\n",
+    "        # Backward pass and optimization.\n",
+    "        loss.backward();\n",
+    "        optimizer.step();\n",
+    "\n",
+    "        total_loss += loss.item();\n",
+    "\n",
+    "    # Print average loss for each epoch\n",
+    "    print(f'Epoch {epoch+1}/{num_epochs}, Loss: {total_loss/len(train_dataloader)}');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8214c80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26518b49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "849a1e87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a614f05e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
