Updates made in Sagemaster. Keep on working and tuning the model from AWS Sagemaster and will upload the final output

--- a/NLP Model.ipynb
+++ b/NLP Model.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[:int(len(df)/10)];"
+    "df = df[:int(len(df)/10)]; ## Limit the rows down to 1/10 of the entire dataset. Total of 56845 rows."
    ]
   },
   {
