--- a/NLP Model.ipynb
+++ b/NLP Model.ipynb
@@ -85,6 +85,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dc60ffc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_cleansing(text):\n",
+    "    # Convert the words in lowercases.\n",
+    "    text = text.lower();\n",
+    "\n",
+    "    # Remove punctuations and special characters.\n",
+    "    text = re.sub(r\"[^a-zA-Z\\s]\", \"\", text);\n",
+    "\n",
+    "    return text;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "816ac516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stopword_cleansing(text):\n",
+    "    # Cleanse the Text\n",
+    "    cleaned_text = text_cleansing(text)\n",
+    "\n",
+    "    # Remove Tokenize the cleaned text\n",
+    "    tokens = word_tokenize(cleaned_text)\n",
+    "    \n",
+    "    # Remove stopwords\n",
+    "    stop_words = set(stopwords.words(\"english\"))\n",
+    "    filtered_tokens = [token for token in tokens if token not in stop_words]\n",
+    "\n",
+    "    return filtered_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "b8104b8f",
    "metadata": {},
@@ -98,8 +136,12 @@
     "    # Ensure all values in 'Text' are strings\n",
     "    df['Text'] = df['Text'].astype(str)\n",
     "\n",
-    "    # Apply tokenization\n",
-    "    df[\"tokenized\"] = df[\"Text\"].apply(word_tokenize)\n",
+    "    # Clean the words using custom function\n",
+    "    df['tokenized'] = df['Text'].apply(lambda x: stopword_cleansing(x))\n",
+    "\n",
+    "    # # Apply tokenization\n",
+    "    # df[\"tokenized\"] = df[\"Text\"].apply(word_tokenize)\n",
+    "\n",
     "else:\n",
     "    raise KeyError(\"'Text' column not found in DataFrame\")"
    ]
@@ -202,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 10;\n",
+    "batch_size = 100;\n",
     "train_size = int(0.75 * n);\n",
     "validation_size = int(0.15 * n);\n",
     "test_size = n - train_size - validation_size;\n",
@@ -223,16 +265,47 @@
    "outputs": [],
    "source": [
     "class Model(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, num_layers = 1):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, bidirectional = True, num_layers = 2, dropout = 0.2):\n",
     "        super(Model, self).__init__();\n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim);\n",
-    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True);\n",
-    "        self.fc = nn.Linear(hidden_dim, output_dim);\n",
+    "        # self.embedding = nn.Embedding(vocab_size, embedding_dim);\n",
+    "        # self.lstm = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True);\n",
+    "        # self.dropout = nn.Dropout(dropout);\n",
+    "        # self.fc = nn.Linear(hidden_dim, output_dim);\n",
+    "        # self.batch_norm = nn.BatchNorm1d(hidden_dim);\n",
     "\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.bidirectional = bidirectional\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True, bidirectional=bidirectional)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.batch_norm = nn.BatchNorm1d(hidden_dim * 2 if bidirectional else hidden_dim)\n",
+    "        self.fc1 = nn.Linear(hidden_dim * 2 if bidirectional else hidden_dim, hidden_dim)\n",
+    "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
+    "    \n",
     "    def forward(self, x):\n",
-    "        embedded = self.embedding(x);\n",
-    "        lstm_out, _ = self.lstm(embedded);\n",
-    "        out = self.fc(lstm_out[:, -1, :]);\n",
+    "        # embedded = self.embedding(x);\n",
+    "        # lstm_out, _ = self.lstm(embedded);\n",
+    "        # lstm_out = self.dropout(lstm_out);\n",
+    "        # lstm_out = self.batch_norm(lstm_out);\n",
+    "        # # out = self.fc(lstm_out[:, -1, :]);\n",
+    "        # out = self.fc(lstm_out);\n",
+    "        # out = self.dropout(out);\n",
+    "\n",
+    "        embedded = self.embedding(x)\n",
+    "        lstm_out, _ = self.lstm(embedded)\n",
+    "        \n",
+    "        # Concatenate the outputs from both directions if bidirectional\n",
+    "        if self.bidirectional:\n",
+    "            lstm_out = torch.cat((lstm_out[:, -1, :self.hidden_dim], lstm_out[:, 0, self.hidden_dim:]), dim=1)\n",
+    "        else:\n",
+    "            lstm_out = lstm_out[:, -1, :]\n",
+    "        \n",
+    "        lstm_out = self.dropout(lstm_out)\n",
+    "        lstm_out = self.batch_norm(lstm_out)\n",
+    "        out = self.fc1(lstm_out)\n",
+    "        out = self.dropout(out)\n",
+    "        out = self.fc2(out)\n",
+    "        \n",
     "        return out;"
    ]
   },
@@ -268,7 +341,7 @@
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss();\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001);"
+    "optimizer = torch.optim.RMSprop(model.parameters(), lr=0.0001);"
    ]
   },
   {
@@ -353,49 +426,6 @@
    "id": "a614f05e",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b055ac4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Shuffle the dataset and obtain random sample from the dataset.\n",
-    "n = len(df);\n",
-    "\n",
-    "# Generate and shuffle the indices.\n",
-    "indices = np.arange(n);\n",
-    "indices = np.random.permutation(indices);\n",
-    "\n",
-    "# Select the train, validation, and test indices. For this LSTM model, we choose to select 75%, 15%, and 10% segments of the dataset respectively.\n",
-    "train_indices = indices[:int(0.7 * n)];\n",
-    "val_indices = indices[int(0.7 * n):int(0.85 * n)];\n",
-    "test_indices = indices[int(0.9*n):];\n",
-    "\n",
-    "train_dataset = torch.utils.data.Subset(df[\"Text\"], train_indices);\n",
-    "val_dataset = torch.utils.data.Subset(df[\"Text\"], val_indices);\n",
-    "test_dataset = torch.utils.data.Subset(df[\"Text\"], test_indices);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "665bae10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch.utils.data.dataset.Subset at 0x334951d80>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": []
   },
   {
