Updating codes and cleaning process is further tuned for better model with lower loss

--- a/NLP Model.ipynb
+++ b/NLP Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "4b009cc2-d6ba-4481-8112-9622b6d88119",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,14 @@
     "from torchvision.datasets import CIFAR10\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "\n",
+    "import re\n",
+    "\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7f2eda4e",
    "metadata": {},
    "outputs": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "225ec1ff",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b8951969",
    "metadata": {},
    "outputs": [],
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2d533789",
    "metadata": {},
    "outputs": [],
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7cfe02bb",
    "metadata": {},
    "outputs": [],
