--- a/NLP Model.ipynb
+++ b/NLP Model.ipynb
@@ -22,6 +22,8 @@
     "\n",
     "from collections import Counter\n",
     "\n",
+    "import awswrangler as wr\n",
+    "\n",
     "import re\n",
     "\n",
     "import progressbar"
@@ -105,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[:int(len(df)/10)]; ## Limit the rows down to 1/10 of the entire dataset. Total of 56845 rows."
+    "df = df[:int(len(df)/10)]; ## Limit the rows down to 1/50 of the entire dataset. Total of 5685 rows."
    ]
   },
   {
@@ -690,7 +692,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 100;\n",
+    "batch_size = 200;\n",
     "train_size = int(0.75 * n);\n",
     "validation_size = int(0.15 * n);\n",
     "test_size = n - train_size - validation_size;\n",
@@ -711,14 +713,8 @@
    "outputs": [],
    "source": [
     "class Model(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, bidirectional = True, num_layers = 2, dropout = 0.2):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, bidirectional = True, num_layers = 3, dropout = 0.5):\n",
     "        super(Model, self).__init__();\n",
-    "        # self.embedding = nn.Embedding(vocab_size, embedding_dim);\n",
-    "        # self.lstm = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True);\n",
-    "        # self.dropout = nn.Dropout(dropout);\n",
-    "        # self.fc = nn.Linear(hidden_dim, output_dim);\n",
-    "        # self.batch_norm = nn.BatchNorm1d(hidden_dim);\n",
-    "\n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
     "        self.bidirectional = bidirectional\n",
     "        self.hidden_dim = hidden_dim\n",
@@ -726,17 +722,10 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.batch_norm = nn.BatchNorm1d(hidden_dim * 2 if bidirectional else hidden_dim)\n",
     "        self.fc1 = nn.Linear(hidden_dim * 2 if bidirectional else hidden_dim, hidden_dim)\n",
+    "        # self.fc2 = nn.Linear(hidden_dim, hidden_dim)\n",
     "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        # embedded = self.embedding(x);\n",
-    "        # lstm_out, _ = self.lstm(embedded);\n",
-    "        # lstm_out = self.dropout(lstm_out);\n",
-    "        # lstm_out = self.batch_norm(lstm_out);\n",
-    "        # # out = self.fc(lstm_out[:, -1, :]);\n",
-    "        # out = self.fc(lstm_out);\n",
-    "        # out = self.dropout(out);\n",
-    "\n",
     "        embedded = self.embedding(x)\n",
     "        lstm_out, _ = self.lstm(embedded)\n",
     "        \n",
@@ -750,6 +739,7 @@
     "        lstm_out = self.batch_norm(lstm_out)\n",
     "        out = self.fc1(lstm_out)\n",
     "        out = self.dropout(out)\n",
+    "        # out = self.fc2(out)\n",
     "        out = self.fc2(out)\n",
     "        \n",
     "        return out;"
@@ -805,15 +795,16 @@
     }
    ],
    "source": [
-    "num_epochs = 10;\n",
+    "num_epochs = 25;\n",
     "\n",
+    "trainingEpoch_loss = [];\n",
     "for epoch in range(num_epochs):\n",
     "    print(f'Starting epoch {epoch+1}')\n",
     "    model.train()  # Train the model\n",
     "    total_loss = 0  # Initialize the Loss to 0\n",
     "\n",
     "    for batch_idx, (inputs, labels) in enumerate(train_dataloader):\n",
-    "        print(f'Processing batch {batch_idx+1}')\n",
+    "        # print(f'Processing batch {batch_idx+1}')\n",
     "        optimizer.zero_grad()  # Clearing out the Gradient Descent\n",
     "\n",
     "        # Forward pass\n",
@@ -821,14 +812,14 @@
     "        labels = labels.to(torch.int64)\n",
     "        outputs = model(inputs)\n",
     "\n",
-    "        # Debugging shapes and types\n",
-    "        print(f'Outputs shape: {outputs.shape}, Labels shape: {labels.shape}')\n",
-    "        print(f'Outputs dtype: {outputs.dtype}, Labels dtype: {labels.dtype}')\n",
+    "        # # Debugging shapes and types\n",
+    "        # print(f'Outputs shape: {outputs.shape}, Labels shape: {labels.shape}')\n",
+    "        # print(f'Outputs dtype: {outputs.dtype}, Labels dtype: {labels.dtype}')\n",
     "\n",
     "        # Calculate the loss\n",
     "        try:\n",
     "            loss = criterion(outputs, labels)\n",
-    "            print(f'Loss: {loss.item()}')\n",
+    "            print(f'Batch: {batch_idx + 1} Loss: {loss.item()}')\n",
     "            # Backward pass and optimization\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -836,6 +827,7 @@
     "            print(f'Error in loss calculation: {e}')\n",
     "            break  # Exit the loop if there's an error in loss calculation\n",
     "\n",
+    "        trainingEpoch_loss.append(loss.item());\n",
     "        total_loss += loss.item();\n",
     "\n",
     "    # Print average loss for each epoch\n",
