Updated model parameters and preprocessing methods

--- a/NLP Model.ipynb
+++ b/NLP Model.ipynb
@@ -157,7 +157,17 @@
    "source": [
     "def extract_adjectives(text):\n",
     "  pos_tags = nltk.pos_tag(text)\n",
-    "  return [word for word, pos in pos_tags if pos in ('JJ', 'JJR', 'JJS')]"
+    "  return [word for word, pos in pos_tags if pos in ('JJ', 'JJR', 'JJS', 'RB', 'RBR', 'RBS', 'VB', 'VBD')]\n",
+    "\n",
+    "# POS Tags for preprocessing\n",
+    "# JJ: Adjective, numeral, or ordinal\n",
+    "# JJR: Adjective, comparative\n",
+    "# JJS: Adjective, superlative\n",
+    "# RB: Adverb\n",
+    "# RBR: Adverb, comparative\n",
+    "# RBS: Adverb, superlative\n",
+    "# VB: Verb\n",
+    "# VBD: Verb, past tense"
    ]
   },
   {
